2014-01-07 Jérôme Pasquier  <rainbru@free.fr>

	* src/genapi.pm: started a switch to handle doxygen sources.
	* src/genapi.pl: added GNU header for 2013-1014.

2013-11-28 Jérôme Pasquier  <rainbru@free.fr>

	* src/genapi.pl (usage): kept from previous removed file.
	* genapi.pl: file removed.

2013-05-02 Jérôme Pasquier  <rainbru@free.fr>

	* src/genapi.pl: sources moved in src/ subdirectory.
