@@ -1,3 +1,3 @@
 [general]
 webname=Api
-rpgroot=../..
+rpgroot=~/rainbrurpg-hg
